Sign In Form alignment is fixed in desktop screen

--- a/_gulp/sass/2-helpers/_variables.sass
+++ b/_gulp/sass/2-helpers/_variables.sass
@@ -32,6 +32,7 @@ $button-font: 'Hammersmith One', sans-serif
 // -------------------- //
 
 $upcoming-watch-bg: '../../assets/img/upcoming-watch-bg.jpg'
+$review-container-bg: '../../assets/img/watch-review-bg.png'
 
 // -------------------- //
 // -MEDIA  BREAKPOINTS- //
