--- a/_gulp/sass/6-pages/02-watch/_reviews.sass
+++ b/_gulp/sass/6-pages/02-watch/_reviews.sass
@@ -17,10 +17,8 @@
         margin-bottom: 0
     .review_container
       padding: 1.25rem 0 0
-      background: url(../../assets/img/watch-review-bg.png) top left no-repeat, url(../../assets/img/watch-review-bg.png) bottom right no-repeat
+      background: url($review-container-bg) top left no-repeat, url($review-container-bg) bottom right no-repeat
       background-size: 52.31px 60px
-      // @media (max-width: 568px)
-      //   padding: 1rem 0 0
       .review
         margin-bottom: 1rem
       .name
