--- a/_gulp/sass/6-pages/06-sign-in/_body.sass
+++ b/_gulp/sass/6-pages/06-sign-in/_body.sass
@@ -39,9 +39,10 @@
     form
       max-width: 500px
       width: 95%
-      margin: 0 auto
       @media (max-width: 768px)
         width: 100%
+        margin: 0 auto
+        max-width: initial
       input
         width: 100%
       button
